[FIX] likwid bash

--- a/Tri-diagonal Linear Systems/Makefile
+++ b/Tri-diagonal Linear Systems/Makefile
@@ -1,14 +1,14 @@
 # PROGRAMA
-    PROG = resolveEDO
-    OBJS = $(PROG).o edo.o utils.o # mod1.o mod2.o
-    VERIF = verificaEP02
+PROG = resolveEDO
+OBJS = $(PROG).o edo.o utils.o # mod1.o mod2.o
+VERIF = verificaEP02
 
 # Compilador
-    CC     = gcc
+CC = gcc
 
 # Acrescentar onde apropriado as opções para incluir uso da biblioteca LIKWID
-    CFLAGS = -O0
-    LFLAGS = -lm
+CFLAGS = -O0 -DLIKWID_PERFMON -I${LIKWID_INCLUDE}
+LFLAGS = -lm -L${LIKWID_LIB} -llikwid
 
 # Lista de arquivos para distribuição. Acrescentar mais arquivos se necessário.
 DISTFILES = *.c *.h LEIAME* Makefile *.dat
@@ -42,3 +42,6 @@ dist: purge
 	@ln -s . $(DISTDIR)
 	@tar -chzvf $(DISTDIR).tgz $(addprefix ./$(DISTDIR)/, $(DISTFILES))
 	@rm -f $(DISTDIR)
+
+teste:
+	likwid-perfctr -C 3 -g ENERGY -m ./resolveEDO
