[ADD] modifying gaussSeidel

--- a/Tri-diagonal Linear Systems/Makefile
+++ b/Tri-diagonal Linear Systems/Makefile
@@ -1,6 +1,9 @@
+# Nome: Kauê de Amorim Silva
+# GRR: 20244719
+
 # PROGRAMA
 PROG = resolveEDO
-OBJS = $(PROG).o edo.o utils.o # mod1.o mod2.o
+OBJS = $(PROG).o edo.o utils.o 
 VERIF = verificaEP02
 
 # Compilador
@@ -11,7 +14,7 @@ CFLAGS = -O0 -DLIKWID_PERFMON -I${LIKWID_INCLUDE}
 LFLAGS = -lm -L${LIKWID_LIB} -llikwid
 
 # Lista de arquivos para distribuição. Acrescentar mais arquivos se necessário.
-DISTFILES = *.c *.h LEIAME* Makefile *.dat
+DISTFILES = *.c *.h LEIAME* Makefile *.dat *.sh
 DISTDIR = ${USER}
 
 .PHONY: clean purge dist all
@@ -42,6 +45,3 @@ dist: purge
 	@ln -s . $(DISTDIR)
 	@tar -chzvf $(DISTDIR).tgz $(addprefix ./$(DISTDIR)/, $(DISTFILES))
 	@rm -f $(DISTDIR)
-
-teste:
-	likwid-perfctr -C 3 -g ENERGY -m ./resolveEDO
